@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
  <notes>
+* [jan] Fix updating alarm if completing a task recurrence.
 * [jan] Fix editing tasks via CalDAV (Bug #12745).
  </notes>
  <contents>
@@ -1420,6 +1421,7 @@
    <date>2013-08-27</date>
    <license uri="http://www.horde.org/licenses/gpl">GPL-2.0</license>
    <notes>
+* [jan] Fix updating alarm if completing a task recurrence.
 * [jan] Fix editing tasks via CalDAV (Bug #12745).
    </notes>
   </release>
